<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            android:gravity="center"
            android:background="@color/spaceblog_background"
            android:text="@string/app_name"
            />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/welcome_text"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:gravity="left"
                android:text="@string/repeat_message"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/repeatSpinner" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:gravity="left"
                android:text="@string/interval_message"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/intervalSpinner" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:gravity="left"
                android:text="@string/delay_message"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/delaySpinner" />
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp"
                android:gravity="left"
                android:text="Phone number: "
                />

            <EditText android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:hint="@string/phone_number" />

            <ImageButton android:id="@+id/pick_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/android_contacts_36"
                android:layout_gravity="right"
                android:onClick="pickContact"
                />




        </LinearLayout>



        <EditText android:id="@+id/edit_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:hint="@string/edit_message" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/send_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:textStyle="normal|bold"
            android:onClick="sendNicoBomb"
            android:drawableRight="@drawable/target_icon_white_leftspace_36"
            android:background="@drawable/custom_button"
            />

    </LinearLayout>
</ScrollView>
